# simple-MLP-network

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  file  mainfile.cc  modsaver.cc
docs/html/: activations_8hh.html  activations_8hh__dep__incl.dot  activations_8hh__incl.dot  activations_8hh_source.html  annotated.html  classConsole-members.html  classConsole.html  classLayer-members.html  classLayer.html  classLayerIteratorProxy-members.html  classLayerIteratorProxy.html  classLayerMLP-members.html  classLayerMLP.html  classLayerMLP__coll__graph.dot  classLayer_1_1LayerIteratorProxy-members.html  classLayer_1_1LayerIteratorProxy.html  classLayer__inherit__graph.dot  classMLPLink-members.html  classMLPLink.html  classMLPLink__inherit__graph.dot  classMLPModelSaver-members.html  classMLPModelSaver.html  classMLPModelSaver__coll__graph.dot  classModelSaver-members.html  classModelSaver.html  classNLink-members.html  classNLink.html  classNLinkIteratorProxy-members.html  classNLinkIteratorProxy.html  classNLink_1_1NLinkIteratorProxy-members.html  classNLink_1_1NLinkIteratorProxy.html  classNLink__inherit__graph.dot  classNet-members.html  classNet.html  classNetMLP-members.html  classNetMLP.html  classNetMLP__coll__graph.dot  classNetMLP__inherit__graph.dot  classNet__coll__graph.dot  classNeuron-members.html  (+110 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  concepts_0.js  concepts_1.js  concepts_2.js  concepts_3.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+12 more)
docs/latex/: activations_8hh.tex  activations_8hh.tex.tmp  activations_8hh__dep__incl.dot  activations_8hh__incl.dot  activations_8hh_source.tex  annotated.tex  classConsole.tex  classLayer.tex  classLayer.tex.tmp  classLayerIteratorProxy.tex  classLayerMLP.tex  classLayerMLP__coll__graph.dot  classLayer_1_1LayerIteratorProxy.tex  classLayer__inherit__graph.dot  classMLPLink.tex  classMLPLink__inherit__graph.dot  classMLPModelSaver.tex  classMLPModelSaver__coll__graph.dot  classModelSaver.tex  classNLink.tex  classNLinkIteratorProxy.tex  classNLink_1_1NLinkIteratorProxy.tex  classNLink__inherit__graph.dot  classNet.tex  classNetMLP.tex  classNetMLP__coll__graph.dot  classNetMLP__inherit__graph.dot  classNet__coll__graph.dot  classNeuron.tex  classNeuronMLP.tex  classNeuronMLP__coll__graph.dot  classNeuronMLP__inherit__graph.dot  classNeuron__coll__graph.dot  classNeuron__inherit__graph.dot  classactivations_1_1ActivationFunc.tex  classactivations_1_1ActivationFunc__inherit__graph.dot  classactivations_1_1Empty.tex  classactivations_1_1Empty__coll__graph.dot  classactivations_1_1ReLU.tex  classactivations_1_1ReLU__coll__graph.dot  (+51 more)
include/: activations_init.hh  back_propagation.hh  console.hh  dataset.hh  dgen.hh  learning.hh  mlp.hh  neuralnet.hpp
include/top/: .net.hh.swp  activations.hh  modsaver.hh  net.hh  net_ms.hh
src/: activations.cc  activations_table.cc  back_propagation.cc  console.cc  console_commands.cc  dataset.cc  dataset_gen.cc  dataset_gen_v1.cc  learning.cc  mlp.cc  mlpsaver.cc
src/dataset/: setup.lnmap
src/dataset-gen/: dgen.cc
tests/: StringSimilaryIndex.hpp  activations-test.cc  console-test.cc  dataset-test.cc  learning-test.cc  mlp-test.cc  mlpsaver-test.cc
